sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart : Int = getNombreValeurs()-1
  var inverse = true
  do{
    if (ecart>1){
      ecart=(ecart.toDouble/1.3).toInt
    }
    inverse = false
    var i=0
    for (i<-ecart to getNombreValeurs()-1-ecart){
      if (!plusPetit(i-ecart,i)){
        echange(i-ecart,i)
        inverse=true
        i=i+1
      }
    }
    
  }while (ecart>1 || !inverse )
}